@@ -9,11 +9,12 @@ import assets
 
 inventory_list = {'text':_('view all inventories'), 'view':'inventory_list', 'famfam':'package_go'}
 inventory_create = {'text':_('create new inventory'), 'view':'inventory_create', 'famfam':'package_add'}
-inventory_balances = {'text':_(u'current balances'), 'view':'inventory_current', 'args':'object.id', 'famfam':'book_addresses'}
+#inventory_balances = {'text':_(u'current balances'), 'view':'inventory_current', 'args':'object.id', 'famfam':'book_addresses'}
 inventory_update = {'text':_(u'edit'), 'view':'inventory_update', 'args':'object.id', 'famfam':'package_green'}
 inventory_delete = {'text':_(u'delete'), 'view':'inventory_delete', 'args':'object.id', 'famfam':'package_delete'}
 inventory_create_transaction = {'text':_('add transaction'), 'view':'inventory_create_transaction', 'args':'object.id', 'famfam':'book_add'}
 inventory_view = {'text':_(u'details'), 'view':'inventory_view', 'args':'object.id', 'famfam':'package_go'}
+inventory_list_transactions = {'text':_(u'inventory transactions'), 'view':'inventory_list_transactions', 'args':'object.id', 'famfam':'book_go'}
 
 inventory_transaction_list = {'text':_('view all transactions'), 'view':'inventory_transaction_list', 'famfam':'book_go'}
 inventory_transaction_create = {'text':_('create new transaction'), 'view':'inventory_transaction_create', 'famfam':'book_add'}
@@ -59,8 +60,8 @@ register_links(ItemTemplate, [template_update, template_delete, template_photos,
 register_links(['supplier_list', 'supplier_create', 'supplier_update', 'supplier_view', 'supplier_delete', 'supplier_assign_itemtemplates'], [supplier_create], menu_name='sidebar')
 register_links(Supplier, [supplier_update, supplier_delete, supplier_assign_itemtemplate, supplier_purchase_orders])
 
-register_links(['inventory_view', 'inventory_list', 'inventory_create', 'inventory_current', 'inventory_update', 'inventory_delete'], [inventory_create], menu_name='sidebar')
-register_links(Inventory, [inventory_balances, inventory_update, inventory_delete, inventory_create_transaction])
+register_links(['inventory_view', 'inventory_list', 'inventory_create', 'inventory_update', 'inventory_delete', 'inventory_transaction_list'], [inventory_create], menu_name='sidebar')
+register_links(Inventory, [inventory_update, inventory_delete, inventory_list_transactions, inventory_create_transaction])
 register_links(Inventory, [inventory_view], menu_name='sidebar')
 
 register_links(['inventory_transaction_list', 'inventory_transaction_create', 'inventory_transaction_update', 'inventory_transaction_delete', 'inventory_transaction_view'], [inventory_create_transaction], menu_name='sidebar')
