@@ -26,7 +26,7 @@
 # Add reporting/hard copies
 # Export data to CSV
 # Closed PO items can't be edited
-# Switch inventory balances and transactions, current balances at hand
+# Switch inventory balances and transactions, current balances at hand  - DONE
     are more useful
 
 Post release
